# ephapaxiser

./: 0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  Justfile  README.adoc  ROADMAP.adoc  SECURITY.md  TOPOLOGY.md
.claude/: CLAUDE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/ai/: AI.a2ml  PLACEHOLDERS.adoc
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/lust/: Intentfile.a2ml
.machine_readable/contractiles/must/: Mustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.well-known/: security.txt
container/: manifest.toml
examples/safe-files/: ephapaxiser.toml
examples/safe-files/src/: file_ops.rs
src/: lib.rs  main.rs
src/abi/: mod.rs
src/codegen/: analyzer.rs  mod.rs  parser.rs  wrapper_gen.rs
src/interface/abi/: Foreign.idr  Layout.idr  Types.idr
src/interface/ffi/: build.zig
src/interface/ffi/src/: main.zig
src/interface/ffi/test/: integration_test.zig
src/manifest/: mod.rs
tests/: integration_test.rs
